--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3000",
     "buildExport": "next build && next export",
     "startBuild": "npx serve out -p 8000",
     "lint": "next lint",
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "^13.0.3",
     "graphql": "^16.6.0",
+    "luxon": "^3.2.1",
     "next": "13.0.3",
     "plop": "^3.1.1",
     "react": "18.2.0",
@@ -41,6 +42,7 @@
     "@storybook/manager-webpack5": "^6.5.13",
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
+    "@types/luxon": "^3.2.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
