--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-toastify": "^9.1.1",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
