--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.10.5",
     "@next/font": "^13.0.3",
     "graphql": "^16.6.0",
+    "graphql-ws": "^5.11.3",
     "luxon": "^3.2.1",
     "next": "13.0.3",
     "plop": "^3.1.1",
